--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 12
 
       - name: Install dependencies
-        run: npm Install
+        run: npm install
 
       - name: Build app
         run: npm run build
@@ -25,4 +25,5 @@ jobs:
       - name: Semantic release
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
         run: npx semantic-release
