--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@danfsd/test-component",
+  "name": "test-component",
   "version": "0.1.0",
   "description": "Made with create-react-library",
   "author": "danfsd",
